--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             left:48px;
             z-index: 40;
         }
+        #block2{
+            position:absolute;
+            left:48px;
+            z-index: 40;
+        }
         #accompany{
             position:absolute;
             left:48px;
@@ -120,6 +125,7 @@
     <script type="module" src="ground.js"></script>
     <script type="module" src="line.js"></script>
     <script type="module" src="block.js"></script>
+    <script type="module" src="block2.js"></script>
     <script type="module" src="game.js"></script>
     <script type="module" src="accompany.js"></script>
     <script type="module" src="dialog.js"></script>
