--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <script type="module" src="ground.js"></script>
     <script type="module" src="line.js"></script>
     <script type="module" src="block.js"></script>
-    <script type="module" src="block2.js"></script>
+    <script type="module" src="Block2.js"></script>
     <script type="module" src="game.js"></script>
     <script type="module" src="accompany.js"></script>
     <script type="module" src="dialog.js"></script>
