--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
             left:48px;
             z-index: 30;
         } 
-        #block{
-            position:absolute;
-            left:48px;
-            z-index: 40;
-        }
         #block2{
             position:absolute;
             left:48px;
             z-index: 40;
         }
+        #block{
+            position:absolute;
+            left:48px;
+            z-index: 40;
+        }
+        #sblock{
+            position:absolute;
+            left:48px;
+            z-index: 40;
+        }
+       
         #accompany{
             position:absolute;
             left:48px;
@@ -126,6 +132,7 @@
     <script type="module" src="ground.js"></script>
     <script type="module" src="line.js"></script>
     <script type="module" src="block.js"></script>
+    <script type="module" src="strangeblock.js"></script>
     <script type="module" src="Block2.js"></script>
     <script type="module" src="game.js"></script>
     <script type="module" src="accompany.js"></script>
