--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
             left:48px;
             z-index: 30;
         }
+        #saw{
+            position:absolute;
+            left:48px;
+            z-index: 30;
+        }
+        #saw2{
+            position:absolute;
+            left:48px;
+            z-index: 41;
+        }
         #teach{
             position:absolute;
             left:48px;
@@ -141,5 +151,6 @@
     <script type="module" src="wall.js"></script>
     <script type="module" src="teach.js"></script>
     <script type="module" src="coloregg.js"></script>
+    <script type="module" src="saw.js"></script>
 </body>
 </html>
