--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             position:absolute;
             left:48px;
             z-index: 41;
+            
         }
         #teach{
             position:absolute;
@@ -100,6 +101,11 @@
             z-index: 70;
         }   
         #dialog{
+            position:absolute;
+            left:48px;
+            z-index: 80;
+        }   
+        #count{
             position:absolute;
             left:48px;
             z-index: 80;
@@ -147,6 +153,7 @@
     <script type="module" src="game.js"></script>
     <script type="module" src="accompany.js"></script>
     <script type="module" src="dialog.js"></script>
+    <script type="module" src="count.js"></script>
     <script type="module" src="play.js"></script>
     <script type="module" src="wall.js"></script>
     <script type="module" src="teach.js"></script>
